--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,8 +16,8 @@ jobs:
       with:
         go-version: 1.19
 
-    - name: Build
-      run: go build -v ./...
+    - name: Build go-server project
+      run: go build -v main/go-server
 
-    - name: Test
-      run: go test -v ./...
+    - name: Test go-server project
+      run: go test -v main/go-server
