--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,7 +17,7 @@ jobs:
         go-version: 1.19
 
     - name: Build go-server project
-      run: go mod init go-server && go build -v ./go-server
+      run: go mod init go-server && go mod tidy && go build -v ./go-server
 
     - name: Test go-server project
       run: go test -v ./go-server
