--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,10 +14,10 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
-        go-version: 1.19
+        go-version: 1.20
 
     - name: Build go-server project
-      run: go mod init main && go mod tidy && go build -v ./go-server
+      run: go mod init go-server && go mod tidy && go build -v ./go-server/
 
     - name: Test go-server project
-      run: go test -v ./go-server
+      run: go test -v ./go-server/
