--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,7 +17,7 @@ jobs:
         go-version: 1.20
 
     - name: Build go-server project
-      run: go run -v ./go-server/go-server.exe
+      run: go build -v ./go-server/
 
     - name: Test go-server project
       run: go test -v ./go-server/
