--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,16 +20,25 @@ jobs:
       run: |
         cd ./go-server/
         go build 
-
-    - name: Test go-server project
-      run: |
-        cd ./go-server/
-        go clean --testcache && go test
         
     - name: Build go-docker project
       run: |
         cd ./go-docker/
         go build 
+  test:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Set up Go
+      uses: actions/setup-go@v3
+      with:
+        go-version: 1.19
+    
+    - name: Test go-server project
+      run: |
+        cd ./go-server/
+        go clean --testcache && go test
 
     - name: Test go-docker project
       run: |
