--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -26,6 +26,7 @@ jobs:
         cd ./go-docker/
         go build 
   test:
+    needs: build
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
