--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -20,3 +20,5 @@ jobs:
 
     - name: Run golangci-lint
       uses: golangci/golangci-lint-action@v3.4.0
+      with:
+        working-directory: ./...
