--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,24 +1,21 @@
-name: Go linter
+name: Lint Code Base
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+on: [push, pull_request]
 
 jobs:
-
   build:
+    name: Lint Code Base
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v3
 
-    - name: Set up Go
-      uses: actions/setup-go@v3
-      with:
-        go-version: 1.19
+      - name: Checkout Code
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
-    - name: Run golangci-lint
-      uses: golangci/golangci-lint-action@v3.4.0
-      with:
-        working-directory: ./...
+      - name: Lint Code Base
+        uses: github/super-linter@v4
+        env:
+          VALIDATE_ALL_CODEBASE: true
+          VALIDATE_JAVASCRIPT_ES: false
