--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -19,3 +19,4 @@ jobs:
         env:
           VALIDATE_ALL_CODEBASE: true
           VALIDATE_JAVASCRIPT_ES: false
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
