--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,6 +25,11 @@ jobs:
       run: |
         cd ./go-docker/
         go build 
+    
+    - name: Build go-email-checker project
+      run: |
+        cd ./go-email-checker/
+        go build
   test:
     needs: build
     runs-on: ubuntu-latest
@@ -44,4 +49,9 @@ jobs:
     - name: Test go-docker project
       run: |
         cd ./go-docker/
+        go clean --testcache && go test
+        
+    - name: Test go-email-checker project
+      run: |
+        cd ./go-email-checker/
         go clean --testcache && go test
